<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>peru-congreso</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>--enable-preview</compilerArgs>
          <source>15</source>
          <target>15</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>kafka-clients</artifactId>
      <groupId>org.apache.kafka</groupId>
      <version>${kafka.version}</version>
    </dependency>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>2.11.2</version>
    </dependency>
    <dependency>
      <artifactId>armeria</artifactId>
      <groupId>com.linecorp.armeria</groupId>
      <version>1.0.0</version>
    </dependency>

    <dependency>
      <artifactId>jsoup</artifactId>
      <groupId>org.jsoup</groupId>
      <version>1.13.1</version>
    </dependency>
    <dependency>
      <artifactId>config</artifactId>
      <groupId>com.typesafe</groupId>
      <version>1.4.0</version>
    </dependency>

    <dependency>
      <artifactId>log4j-api</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <artifactId>log4j-core</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>${log4j.version}</version>
    </dependency>

    <dependency>
      <artifactId>log4j-slf4j-impl</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>${log4j.version}</version>
    </dependency>
  </dependencies>
  <groupId>io.github.jeqo.pe</groupId>

  <modelVersion>4.0.0</modelVersion>

  <properties>
    <kafka.version>2.6.0</kafka.version>
    <log4j.version>2.13.3</log4j.version>

    <maven.compiler.source>15</maven.compiler.source>
    <maven.compiler.target>15</maven.compiler.target>
  </properties>

  <version>0.1.0-SNAPSHOT</version>
</project>